# CDGMagic

./: .gitmodules  CD+Graphics Magic ReadMe.txt  CDG_Magic__Linux.cbp  CDG_Magic__Windows.cbp  CMakeLists.txt  License__CDGMagic_EXPERIMENTAL.txt  README.txt  Windows_FLTK__config.h
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  configure.sh
Source/: CDGMagic_Application.cpp  CDGMagic_Application.h  CDGMagic_AudioPlayback.cpp  CDGMagic_AudioPlayback.h  CDGMagic_BMPClip.cpp  CDGMagic_BMPClip.h  CDGMagic_BMPClip_Window.cpp  CDGMagic_BMPClip_Window.h  CDGMagic_BMPLoader.cpp  CDGMagic_BMPLoader.h  CDGMagic_BMPObject.cpp  CDGMagic_BMPObject.h  CDGMagic_BMPObject__bilinear_resize.cpp  CDGMagic_EditingGroup.cpp  CDGMagic_EditingGroup.h  CDGMagic_EditingGroup_Callbacks.cpp  CDGMagic_EditingLanes.cpp  CDGMagic_EditingLanes.h  CDGMagic_EditingLanes_PlaybackHead.cpp  CDGMagic_EditingLanes_PlaybackHead.h  CDGMagic_FontBlock.cpp  CDGMagic_FontBlock.h  CDGMagic_GraphicsDecoder.cpp  CDGMagic_GraphicsDecoder.h  CDGMagic_GraphicsEncoder.cpp  CDGMagic_GraphicsEncoder.h  CDGMagic_GraphicsEncoder__compositor.cpp  CDGMagic_GraphicsEncoder__write_fontblock.cpp  CDGMagic_Main.cpp  CDGMagic_MainWindow.cpp  CDGMagic_MainWindow.h  CDGMagic_MainWindow_MenuBar.cpp  CDGMagic_MainWindow_MenuBar.h  CDGMagic_MainWindow_MenuBar_MenuItems.h  CDGMagic_MediaClip.cpp  CDGMagic_MediaClip.h  CDGMagic_MovableClipBox.cpp  CDGMagic_MovableClipBox.h  CDGMagic_PALGlobalClip.cpp  CDGMagic_PALGlobalClip.h  (+27 more)
